Build vNext
=============================

** Known BREAKING CHANGES from NH4.0.0.Alpha1 to 4.0.0.Alpha1

    Fixed mapping by code behaviour when map child subclasses (see NH-3135 and NH-3269)


Build 4.0.0.Alpha1
=============================

** Known BREAKING CHANGES from NH3.3.3.GA to 4.0.0.Alpha1

    NHibernate now targets .Net 4.0. Many uses of set types from Iesi.Collections have
    now been changed to use corresponding types from the BCL. The API for these types
    are slightly different.

    Support for persistent non-generic collections removed. Use the generic counterparts instead.

    ##### Possible Breaking Changes #####
        * IDeleteEventListener, IEventSource: Use generic ISet<> instead of non-generic in method signatures.
        * SqlString.Parts removed. Use SqlString.Count and SqlString.GetEnumerator().
        * IPersistentCollection.GetSnapshot() now returns object instead of ICollection. The snapshot should be opaque to outside code.
        * Removed IsDiscriminatorFormula, DiscriminatorFormula and GenerateSelectString from UnionSubclassEntityPersister class.
        * Removed ManagedWebSessionContext. Any configuration files which use the "managed_web" session context should now use "web"
        * SybaseASADialect removed: Use SybaseSQLAnywhere10Dialect instead.
        * ASA10ClientDriver, ASAClientDriver and SQLiteDriver removed: Use SybaseSQLAnywhereDriver, SybaseAsaClientDriver, SQLite20Driver instead.
        * Removed Classic HQL Parser.
        * Removed IQueryTranslatorFactory2. It's methods were pulled up to IQueryTranslatorFactory. Method CreateQueryTranslators accepting string as first argument marked as Obsolete. 
        * IQueryExpression.Translate now has second boolean argument 'filter'
        * Added several methods which accepts IQueryExpression to ISessionImplementor, which is duplicating methods which accepts string.